--- a/NPSSOnlineRecruitmentPortal/Views/Shared/_Layout.cshtml
+++ b/NPSSOnlineRecruitmentPortal/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
             </nav>*@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                 <li>@Html.ActionLink("Application", "Instructions", "Home")</li>
                 <li>@Html.ActionLink("ReportDetail", "ReportDetail", "Home")</li>
             </ul>
@@ -67,13 +67,13 @@
     <div class="modal" id="modal-center" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header" style="font-weight:bold;">
                     <h5 class="modal-title">Self Declaration (બાંહેધરી)</h5>
                     <button type="button" class="close" data-dismiss="modal" style="margin-top:-35px;">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="font-weight:bold;">
                     <p>
                         હું ખાત્રી પૂર્વક જાહેર કરું છું કે
                         (૧) મને નગર પ્રાથમિક શિક્ષણ સમિતિ, અમદાવાદ કે અન્ય સરકારી/અર્ધ સરકારી / સરકાર હસ્તકની કોઈપણ સંસ્થા દ્વારા કયારેય પણ ગેરલાયક ઠરાવેલ નથી કે મારી ગેરલાયકાતનો સમય ચાલુ નથી.
