--- a/NPSSOnlineRecruitmentPortal/Content/master_style.css
+++ b/NPSSOnlineRecruitmentPortal/Content/master_style.css
@@ -62,6 +62,14 @@ Body :		Poppins, sans-serif;
     height: 100%;
 }
 
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border-color: #101010 !important;
+    background: #4b6c9e !important;
+    font-size: 1.2em !important;
+    font-weight: bold !important;
+    color: #ffffff !important;
+}
+
 /***** Loader scss start here *****/
 .loader-overlay {
   background-color: rgba(0, 0, 0, 0.4);
