--- a/NPSSOnlineRecruitmentPortal/Report/QualificationDetail.rdlc
+++ b/NPSSOnlineRecruitmentPortal/Report/QualificationDetail.rdlc
@@ -648,7 +648,7 @@
         <DataSetName>Qualification</DataSetName>
         <Top>0.25in</Top>
         <Height>0.5in</Height>
-        <Width>7.29167in</Width>
+        <Width>7.29168in</Width>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -702,14 +702,14 @@
     <Height>1.905cm</Height>
     <Style />
   </Body>
-  <Width>18.52084cm</Width>
+  <Width>18.52087cm</Width>
   <Page>
     <PageHeight>29.7cm</PageHeight>
     <PageWidth>21cm</PageWidth>
-    <LeftMargin>2.54cm</LeftMargin>
-    <RightMargin>2.54cm</RightMargin>
-    <TopMargin>2.54cm</TopMargin>
-    <BottomMargin>2.54cm</BottomMargin>
+    <LeftMargin>0cm</LeftMargin>
+    <RightMargin>0cm</RightMargin>
+    <TopMargin>0cm</TopMargin>
+    <BottomMargin>0cm</BottomMargin>
     <ColumnSpacing>1.27cm</ColumnSpacing>
     <Style />
   </Page>
@@ -777,6 +777,7 @@
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
+  <ConsumeContainerWhitespace>true</ConsumeContainerWhitespace>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
   <rd:ReportID>cf19ed6a-a9de-446d-a2a3-ddc15121c9f5</rd:ReportID>
 </Report>
